--- a/app/src/main/res/layout/delivery_details.xml
+++ b/app/src/main/res/layout/delivery_details.xml
@@ -27,8 +27,9 @@
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        tools:layout_editor_absoluteX="1dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
@@ -60,7 +61,7 @@
     <EditText
         android:id="@+id/editTextTextPersonName4"
         android:layout_width="wrap_content"
-        android:layout_height="32"
+        android:layout_height="32dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
@@ -72,7 +73,7 @@
     <EditText
         android:id="@+id/editTextTextPersonName5"
         android:layout_width="wrap_content"
-        android:layout_height="32"
+        android:layout_height="32dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="12dp"
@@ -84,7 +85,7 @@
     <EditText
         android:id="@+id/editTextTextPersonName6"
         android:layout_width="wrap_content"
-        android:layout_height="32"
+        android:layout_height="32dp"
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="16dp"
@@ -99,8 +100,9 @@
         android:layout_height="1dp"
         android:layout_marginTop="72dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6"
-        tools:layout_editor_absoluteX="1dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />
 
     <TextView
         android:id="@+id/textView11"
@@ -114,7 +116,7 @@
     <EditText
         android:id="@+id/editTextTextPersonName7"
         android:layout_width="wrap_content"
-        android:layout_height="32"
+        android:layout_height="32dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -133,7 +135,7 @@
     <EditText
         android:id="@+id/editTextTextPersonName8"
         android:layout_width="wrap_content"
-        android:layout_height="32"
+        android:layout_height="32dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="@+id/textView12"
@@ -151,7 +153,7 @@
     <EditText
         android:id="@+id/editTextTextPersonName9"
         android:layout_width="wrap_content"
-        android:layout_height="32"
+        android:layout_height="32dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="@+id/textView13"
@@ -163,8 +165,9 @@
         android:layout_height="1dp"
         android:layout_marginTop="32dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9"
-        tools:layout_editor_absoluteX="1dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />
 
     <TextView
         android:id="@+id/textView14"
@@ -192,8 +195,9 @@
         android:layout_width="409dp"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@+id/textView14"
-        tools:layout_editor_absoluteX="1dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
     <Button
         android:id="@+id/button2"
