--- a/app/src/main/res/layout/help_page.xml
+++ b/app/src/main/res/layout/help_page.xml
@@ -139,7 +139,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnSubmit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
