--- a/app/src/main/res/layout/cart.xml
+++ b/app/src/main/res/layout/cart.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="22dp"
         android:background="#232121"
 
-        android:text="    Id      Food Name          Price(RM)         Quantity          Total"
+        android:text="       Food Name                        Price(RM)         Quantity          Total"
         android:textColor="@color/cardview_light_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,70 +39,70 @@
 
     <TextView
         android:id="@+id/cartText"
-        android:layout_width="411dp"
-        android:layout_height="51dp"
+        android:layout_width="165dp"
+        android:layout_height="115dp"
         android:layout_marginTop="40dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
         android:textSize="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toStartOf="@+id/priceText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Border" />
 
     <TextView
-        android:id="@+id/payment"
-        android:layout_width="413dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="316dp"
-        android:background="#D5D0D0"
-        android:gravity="center_vertical"
-        android:text="          Payment Method"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/textView25"
-        android:layout_width="193dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="80dp"
+        android:layout_width="202dp"
+        android:layout_height="61dp"
         android:gravity="center"
         android:text="Payment Method"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.014"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/payment" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.708" />
 
     <TextView
         android:id="@+id/textView26"
-        android:layout_width="197dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="70dp"
+        android:layout_width="205dp"
+        android:layout_height="64dp"
         android:gravity="center"
         android:text="Delivery details"
-        app:layout_constraintBottom_toTopOf="@+id/btnOrder"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.844" />
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="192dp"
-        android:layout_height="70dp"
+        android:layout_width="174dp"
+        android:layout_height="78dp"
 
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
+        android:dropDownWidth="wrap_content"
+        android:gravity="center|center_horizontal"
+        android:minWidth="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/payment" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.708" />
 
     <Button
         android:id="@+id/btnaddress"
-        android:layout_width="166dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="13dp"
-        android:layout_marginRight="13dp"
-        android:layout_marginBottom="70dp"
+        android:layout_width="160dp"
+        android:layout_height="70dp"
         android:text="Set Address"
-        app:layout_constraintBottom_toTopOf="@+id/btnOrder"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.94"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.851" />
 
     <Button
         android:id="@+id/btnOrder"
@@ -117,5 +117,62 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/priceText"
+        android:layout_width="84dp"
+        android:layout_height="116dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        app:layout_constraintEnd_toStartOf="@+id/quanText"
+        app:layout_constraintStart_toEndOf="@+id/cartText"
+        app:layout_constraintTop_toBottomOf="@+id/Border" />
+
+    <TextView
+        android:id="@+id/quanText"
+        android:layout_width="80dp"
+        android:layout_height="116dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toStartOf="@+id/totalText"
+        app:layout_constraintStart_toEndOf="@+id/priceText"
+        app:layout_constraintTop_toBottomOf="@+id/Border" />
+
+    <TextView
+        android:id="@+id/totalText"
+        android:layout_width="81dp"
+        android:layout_height="116dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/quanText"
+        app:layout_constraintTop_toBottomOf="@+id/Border" />
+
+    <View
+        android:id="@+id/divider7"
+        android:layout_width="409dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="312dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="-1dp" />
+
+    <TextView
+        android:id="@+id/textView29"
+        android:layout_width="411dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="196dp"
+        android:background="#C6C1C1"
+        android:gravity="center"
+        android:text="Payment and Delivery Details"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Border" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
