--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorOrange">#ff9800</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorGrey">#808080</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
