--- a/app/src/main/res/layout/credit_card_page.xml
+++ b/app/src/main/res/layout/credit_card_page.xml
@@ -103,14 +103,11 @@
         android:id="@+id/textView17"
         android:layout_width="73dp"
         android:layout_height="22dp"
-        android:layout_marginStart="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginTop="320dp"
-        android:layout_marginEnd="336dp"
-        android:layout_marginRight="336dp"
+        android:layout_marginTop="300dp"
         android:text="Name"
         app:layout_constraintBottom_toTopOf="@+id/nameText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.106"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
@@ -119,18 +116,17 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="330dp"
-        android:layout_marginRight="330dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="12dp"
         android:text="CVC/CW"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/card"
         tools:ignore="MissingConstraints" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/nameText"
-        android:layout_width="407dp"
+        android:layout_width="350dp"
         android:layout_height="54dp"
         android:layout_marginTop="2dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -140,9 +136,8 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/card"
-        android:layout_width="421dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="15dp"
+        android:layout_width="354dp"
+        android:layout_height="55dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView18"
@@ -150,9 +145,10 @@
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/cvcText"
-        android:layout_width="408dp"
-        android:layout_height="wrap_content"
+        android:layout_width="354dp"
+        android:layout_height="48dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView19"
         tools:ignore="MissingConstraints" />
@@ -192,11 +188,10 @@
         android:id="@+id/textView18"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="330dp"
-        android:layout_marginRight="330dp"
+        android:layout_marginTop="8dp"
         android:text="Card Number"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.094"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameText"
         tools:ignore="MissingConstraints" />
